--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <img src="./assets/ico/logo.png" width="180">
                 <div class="description wow">
                     <p>
-                        SOMETHING AWSOME IS IN THE WORKS!
+                        SOMETHING AWESOME IS IN THE WORKS!
                     </p>
                 </div>
                 <div class="description wow">
