--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
                 <img src="./assets/ico/logo.png" width="180">
                 <div class="description wow">
                     <p>
-                        SOMETHING AWESOME IS IN THE WORKS!
+                        Something awesome is in the works. Stay tuned!
                     </p>
                 </div>
-                <div class="description wow">
+<!--                 <div class="description wow">
                     <h6>
                         STAY TUNED. LAUNCHING SOON.
                     </h6>
-                </div>
+                </div> -->
 
                 <div class="d-flex align-items-center justify-content-center description mb-3">
                     <div class="bg-white d-flex align-items-center justify-content-between">
