--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <div class="top-content d-flex align-items-center justify-content-center">
             <div class="container">
 
-                <img src="./assets/ico/logo.png" width="180">
+<!--                 <img src="./assets/ico/logo.png" width="180"> -->
+	    	<img id="kadhaa-logo" src="./assets/ico/logo.png">
                 <div class="description wow">
                     <p>
                         Something awesome is in the works. Stay tuned!
